# solarpros

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2e69182e3852_initial_schema_all_tables.py  a3f1c2d4e5b6_add_owner_contact_fields.py  d5f9a2b1c3e7_pipeline_v2_models.py
backend/src/solarpros/: config.py  main.py
backend/src/solarpros/agents/: base.py  controller.py
backend/src/solarpros/agents/email_outreach/: __init__.py  agent.py  compliance.py  personalization.py  sendgrid_client.py  tasks.py  templates.py  tracker.py
backend/src/solarpros/agents/enrichment/: agent.py  role_classifier.py  tasks.py  waterfall.py
backend/src/solarpros/agents/outreach/: agent.py  sequence_builder.py  tasks.py
backend/src/solarpros/agents/owner_id/: __init__.py  agent.py  confidence.py  hunter_io.py  sos_lookup.py  tasks.py
backend/src/solarpros/agents/property_discovery/: __init__.py  agent.py  filters.py  tasks.py
backend/src/solarpros/agents/scoring/: agent.py  segmentation.py  tasks.py  weights.py
backend/src/solarpros/agents/solar_analysis/: __init__.py  agent.py  (+4 more)
backend/src/solarpros/celery_app/: app.py  beat_schedule.py  config.py
backend/src/solarpros/db/: __init__.py  base.py  session.py
backend/src/solarpros/models/: __init__.py  agent_run.py  contact.py  email_campaign.py  outreach.py  owner.py  property.py  score.py  solar_analysis.py  trigger_event.py
backend/src/solarpros/schemas/: __init__.py  agent.py  campaign.py  dashboard.py  owner.py  property.py  score.py  solar.py
backend/src/solarpros/utils/: __init__.py  circuit_breaker.py  rate_limiter.py  retry.py
(+67 files in other folders)
