[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solarpros"
version = "0.1.0"
description = "Multi-Agent Solar Prospect Targeting System"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
