[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solarpros-backend"
version = "0.1.0"
description = "SolarPros Backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "geoalchemy2>=0.14.0",

    # Task queue
    "celery[redis]>=5.3.6",
    "flower>=2.0.1",
    "redis>=5.0.0",

    # Scraping
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # AI / LLM
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",

    # Email
    "sendgrid>=6.11.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/solarpros"]
